οnly dapc left from m&m

--- a/Tourvas_proposal.Rmd
+++ b/Tourvas_proposal.Rmd
@@ -39,7 +39,7 @@ always_allow_html: yes
 Η ευρωπαϊκή καστανιά (_Castanea sativa_ Mill.) είναι ένα από τα πιο διαδεδομένα και οικονομικά σημαντικά είδη της λεκάνης της Μεσογείου (cite euforgen). Εκμεταλλεύεται τόσο για τους καρπούς της όσο και για την ξυλεία της και για αυτό το λόγο καλλιεργείται σε περιοχές πλέον της μεσογειακής ζώνης (citation?). 
 
 Η μεγάλη εξάρτηση κοινωνιών έχει οδηγήσει...
-Εξαιτίας της εκτεταμένης ανθρωπογενούς μεταφοράς γενετικού υλικού..., γενετικό υλικό του είδους έχει τύχει εκτεταμένης μεταφοράς (δες στα παπερ για ancient και κάνε cite) εδώ και αιώνες. Επιπλέον η χρήση επιλεγμένων γενοτύπων σε καστανεώνες αλλά και πρεμνοφυής διαχείριση των φύσικών πληθυσμών έχουν επιφέρει σημαντικές απώλειες γενετικών πόρων του είδους (αραβανοπ? - παπαδ). Η πίεση αυτή έχει ισχυροποιηθεί - ενταθεί λόγω προσβολών κυρίως από τους μύκητες _Cryphonectria parasitica_ και _Phytophthora cambivora_.
+Εξαιτίας της εκτεταμένης ανθρωπογενούς μεταφοράς γενετικού υλικού..., γενετικό υλικό του είδους έχει τύχει εκτεταμένης μεταφοράς (δες στα παπερ για ancient και κάνε cite) εδώ και αιώνες. Επιπλέον η χρήση επιλεγμένων γενοτύπων σε καστανεώνες αλλά και πρεμνοφυής διαχείριση των φυσικών πληθυσμών έχουν επιφέρει σημαντικές απώλειες γενετικών πόρων του είδους (αραβανοπ? - παπαδ). Η πίεση αυτή έχει ισχυροποιηθεί - ενταθεί λόγω προσβολών κυρίως από τους μύκητες _Cryphonectria parasitica_ και _Phytophthora cambivora_.
 + κατακερματισμός απομόνωση γενετικού υλικού
 
 ΔΕΣ Παπαδήμα Καστοριά
@@ -66,9 +66,8 @@ Founder effect από ανθρω
 Συγκεκριμένα στην Ελλάδα...
   
   
-1. Η λεπτομερής γνώση της δομής και της σύνθεσης της γενετικής παραλλακτικότητας αποτελεί απαραίτητη προϋπόθεση για την προστασία και διαχείριση των γενετικών πόρων ενός είδους. Στη γεωργία, οι περισσότερες καλλιέργειες, έχουν απολέσει το μεγαλύτερο μέρος των γενετικών πόρων που διέθεταν πριν την βελτιστοποίηση της παραγωγικής διαδικασίας μέσω της επιλογής ποικιλιών και άριστων κλώνων. ...kastanewnes... Αυτό έχει σαν αποτέλεσμα να δυσχερένεται το έργο των βελτιωτών στην εύρεση κατάλληλων γενοτύπων για διασταυρώσεις και να μειώνεται το δυναμικό προσαρμογής ως προς νέα γνωρίσματα.
+Η λεπτομερής γνώση της δομής και της σύνθεσης της γενετικής παραλλακτικότητας αποτελεί απαραίτητη προϋπόθεση για την προστασία και διαχείριση των γενετικών πόρων ενός είδους. Στη γεωργία, οι περισσότερες καλλιέργειες, έχουν απολέσει το μεγαλύτερο μέρος των γενετικών πόρων που διέθεταν πριν την βελτιστοποίηση της παραγωγικής διαδικασίας μέσω της επιλογής ποικιλιών και άριστων κλώνων. Παρόμοια τάση παρατηρείται και στους καστανεώνες της χώρας μας οι οποίοι συνήθως δημιουργούνται με εμβόλια επιλεγμένων κλώνων σε υποκείμενα άγριου τύπου.  Αυτό έχει σαν αποτέλεσμα να δυσχερένεται το έργο των βελτιωτών στην εύρεση κατάλληλων γενοτύπων για διασταυρώσεις και να μειώνεται το δυναμικό προσαρμογής ως προς νέα γνωρίσματα.
 
-Αυτό το φαινόμενο παρατηρείται στους καστανεώνες της χώρας μας οι οποίοι συνήθως δημιουργούνται με εμβόλια επιλεγμένων κλώνων σε υποκείμενα άγριου τύπου. 
 coppice - πρεμνοφυής διαχείριση - τα πρεμνοφυή δάση αναπαράγονται βλαστικά και αρα αναμένεται να έχουν χαμηλότερο δραστικό μέγεθος πληθυσμού συγκρινόμενα με όμοιας έκτασης φυσικά δάση καστανιάς που αναπαράγονται εγγενώς [@Mattioni2008].[hill] Το χαμηλότερο δραστικό μέγεθος πληθυσμού υποδεικνύει ότι το γενετικό απόθεμα από το οποίο προκύπτει η εξέλιξη του δάσους είναι μικρό και άρα ενδυνάμει μικρότερο δυναμικό προσαρμογής ή/και πιο αργό βαθμό εξελικτικής προσαρμογής σε περιπτώσεις ταχείας περιβαλλοντικής μεταβολής [47].
 
 refugia - founder effects
@@ -88,7 +87,7 @@ refugia - founder effects
 
 ## Μεθοδολογία
 
-### Συλλογή φυτικού υλικού & Εκχύλιση DNA
+#### _Συλλογή φυτικού υλικού & Εκχύλιση DNA_
 Θα διεξαχθεί δειγματοληψία κατ' ελάχιστον 25-30 ατόμων ανά πληθυσμό. Η εκχύλιση του γενωμικού DNA θα πραγματοποιηθεί με τη μέθοδο CTAB [@doyle1987genomic].
 
 ### Αλυσιδωτή αντίδραση πολυμεράσης & Γενοτύπηση
@@ -100,45 +99,27 @@ refugia - founder effects
 ### Γενετική ποικιλότητα εντός πληθυσμών
 Η στατιστική ανάλυση θα πραγματοποιηθεί σε περιβάλλον της στατιστικής γλώσσας R [@RCoreTeam2018] με χρήση των πακέτων poppr [@Kamvar2014], hierfstat [@goudet_hierfstat_2005], και genepop [@Rousset2008]. Οι βασικές παράμετροι γενετικής ποικιλότητας (αριθμός αλληλομόρφων, ετεροζυγωτία, συντελεστής ομομειξίας, ισορροπία Hardy-Weinberg κ.α.) θα εκτιμηθούν αφού πρώτα διερευνηθεί η ανισορροπία σύνδεσης μεταξύ των γονιδιακών θέσεων και η πιθανότητα ύπαρξης μηδενικών αλληλομόρφων. 
 
-Η εκτίμηση δραστικού μεγέθους πληθυσμού θα πραγματοποιηθεί σύμφωνα με τη μέθοδο πρυ έχει προταθεί α...με το πρόγραμμα N~e~ Estimator [@Do2014],  
+Τα δραστικά μεγέθη των πληθυσμών θα εκτιμηθούν με το πρόγραμμα N~e~ Estimator [@Do2014], ενώ η ύπαρξη γενετικών στενωπών στην εξελικτική ιστορία των πληθυσμών θα διερευνηθεί με τα προγράμματα BOTTLENECK [@Piry1999] (πρόσφατο παρελθόν: 2 N~e~ - 4 N~e~ γενεές) και Arlequin [@excoffier_arlequin_2010] (M-ratio test, υποδεικνύει παλαιότερες δημογραφικές μεταβολές).
 
 Επίσης θα υπολογιστεί ο αριθμός των γενοτύπων (multilocus genotypes) που απαντώνται στον υπό μελέτη καστανεώνα. 
 
-M ratio -> υποδεικνύει μείωση μεγέθους πληθυσμού σε μεγάλα χρονικά διαστήματα [@Aleksic2014]
-BOTTLENECK -> πρόσφατες γενετικές στενωπούς (πρόσφατο εξελικτικό παρελθόν: 2 N~e~ - 4 N~e~ γενεές)
+### Γενετική ποικιλότητα μεταξύ πληθυσμών
 
-R Notebook - R markdown
+Θα υπολογιστεί ο συντελεστής διαφοροποίησης F~ST~ [@nei1987molecular], η γενετική απόσταση κατά Nei [-@Nei1978], καθώς και η γεωμετρική απόσταση Cavalli-Sforza [@cavalli1967phylogenetic] με το πακέτο hierfstat της R [@goudet_hierfstat_2005]. Οι πολυμεταβλητές αναλύσεις PCA, CA και η ανάλυση μοριακής διακύμανσης AMOVA θα διεξαχθούν με το πακέτο adegenet [@Jombart2008]. Το λογισμικό Structure [@pritchard_inference_2000], αλλά και η πολυμεταβλητή ανάλυση DAPC (σε περιβάλλον R) θα χρησιμοποιηθoύν για την περαιτέρω διερεύνηση της διαφοροποίησης των δύο πληθυσμών. H Dapc ενδέχεται να αποδειχθεί ιδιαίτερα χρήσιμη εάν 
 
-### διαφοροποίηση
-Nei's Ds, Cav-Sf για φυλογενετικά 
-F~ST~, G''~ST~, D~est~
-PCA, CA adegenet
-AMOVA
-φυλογενετική ape Cavalli-Sforza - δε χρειάζεται για 2 πληθυσμούς. Αν όμως προστεθούν κ άλλοι
-STRUCTURE 
-DAPC
+<!-- η dapc δεν προϋποθέτει ισορροπία Hardy-Weinberg ενδέχεται να αποδειχθεί ιδιαίτερα χρήσιμη εάν-->
 
 ### Γονιδιακή ροή
-δες οπωσδήποτε [@Aleksic2014; @Leonarduzzi2016a]
-Cervus (see SM1 Leonarduzzi) -> ποσοστό παιδιών που οι γονείς τους είναι άτομα του πληθυσμού
-<!-- άρα απαιτεί δειγματοληψία αναγέννησης-->
-Nm=1/4FSt παραδοσιακή μέθοδος
-STRUCTURE μοντέλο πρόδρομης γνώσης πληθυσμών -> δες [@Aleksic2014; @pritchard_inference_2000]
-MIGRATE
-MIGRAINE
-
-With an estimated average mutation rate of roughly l =5 · 10)4 (Goldstein & Schlotterer 1999; Whittaker et al. 2003)
-
-In many cases gene flow can be safely assumed to be high relative to mutation rate, so in much of the literature GST is used to assess migration rates [Whitlock 2011]
+Ο αριθμός των μεταναστών θα εκτιμηθεί αρχικά σύμφωνα με το κλασσικό μοντέλο $Nm = [(1 / F~ST~) - 1] / 4$ [@frankham_introduction_2002]. Ωστόσο, αποτελεί παραδοχή της μεθόδου ότι η μετανάστευη είναι τάξεις μεγεθους μεγαλύτερη σε σχέση με τις μεταλλάξεις. Λόγω του υψηλού ρυθμού μεταλλάξεων που χαρακτηρίζει τους μικροδορυφόρους (περίπου $5 * 10^{-4}$)  [@whittaker_likelihood-based_2003] αυτή η παραδοχή ενδέχεται να παραβιάζεται [@whitlock_gst_2011]. Για το λόγο αυτό, ο αριθμός των μεταναστών θα υπολογιστεί και με τη χρήση των εξειδικευμένων λογισμίκών (coalescent-based models) Migrate [@beerli_maximum_2001] και MIGRAINE [@de_iorio_stepwise_2005].
 
 
 ## Αναμενόμενα αποτελέσματα
 
-ΔΕΣ ΔΥΟ παραγράφους outputs στο εδινβουργο!!!
+<!-- ΔΕΣ ΔΥΟ παραγράφους outputs στο εδινβουργο!!! -->
 
-καταγραφή γενετικής ποικιλότητας και δημογραφικών παραγόντων των δύο πληθυσμών. Αυτό θα ενισχύσει την προσπάθει προστασία των γενετικών πόρων του είδους στο ΒΑ Αιγαίο και την ορθολογική διαχείρηση του πολλαπλασιαστικού υλικού
+καταγραφή γενετικής ποικιλότητας και δημογραφικών παραγόντων των δύο πληθυσμών. Αυτό θα ενισχύσει την προσπάθεια διαφύλαξης των γενετικών πόρων του είδους στο ΒΑ Αιγαίο και την ορθολογική διαχείριση του πολλαπλασιαστικού υλικού --> πρέπει να γίνει κάτι για την προστασία των γεν πόρων του φυσικού πληθυσμού;
 
-γενετικός χαρακτηρισμός ποικιλία λεσβου Αγιάσου
+Ο γενετικός χαρακτηρισμός της ποικιλίας Αγιάσου Λέσβου 
 --> για την ταυτοποίηση και την ιχνηλασιμότητα
 πιστοποίηση [δες και γανό]
 
@@ -175,6 +156,24 @@ kable(mtcars[1:10, 1:6], caption = "Group Rows") %>%
 <!-- Geneland -->
 <!-- DIYABC ??? -->
 <!-- GeneClass2 ??? -->
+
+<!-- M ratio -> υποδεικνύει μείωση μεγέθους πληθυσμού σε μεγάλα χρονικά διαστήματα [@Aleksic2014] -->
+<!-- BOTTLENECK -> πρόσφατες γενετικές στενωπούς (πρόσφατο εξελικτικό παρελθόν: ) -->
+
+<!-- R Notebook - R markdown -->
+
+<!-- δες οπωσδήποτε [@Aleksic2014; @Leonarduzzi2016a] -->
+<!-- Cervus (see SM1 Leonarduzzi) -> ποσοστό παιδιών που οι γονείς τους είναι άτομα του πληθυσμού -->
+<!-- άρα απαιτεί δειγματοληψία αναγέννησης-->
+<!-- STRUCTURE μοντέλο πρόδρομης γνώσης πληθυσμών -> δες [@Aleksic2014; @pritchard_inference_2000] -->
+
+<!-- Nei's Ds, Cav-Sf για φυλογενετικά  -->
+<!-- F~ST~, G''~ST~, D~est~ -->
+<!-- PCA, CA adegenet -->
+<!-- AMOVA -->
+<!-- STRUCTURE  -->
+<!-- DAPC -->
+
 
 ## Βιβλιογραφία
 <!-- &nbsp;  -->
