--- a/Tourvas_proposal.tex
+++ b/Tourvas_proposal.tex
@@ -108,7 +108,7 @@
 εκτεταμένης ανθρωπογενούς μεταφοράς γενετικού υλικού\ldots{}, γενετικό
 υλικό του είδους έχει τύχει εκτεταμένης μεταφοράς (δες στα παπερ για
 ancient και κάνε cite) εδώ και αιώνες. Επιπλέον η χρήση επιλεγμένων
-γενοτύπων σε καστανεώνες αλλά και πρεμνοφυής διαχείριση των φύσικών
+γενοτύπων σε καστανεώνες αλλά και πρεμνοφυής διαχείριση των φυσικών
 πληθυσμών έχουν επιφέρει σημαντικές απώλειες γενετικών πόρων του είδους
 (αραβανοπ? - παπαδ). Η πίεση αυτή έχει ισχυροποιηθεί - ενταθεί λόγω
 προσβολών κυρίως από τους μύκητες \emph{Cryphonectria parasitica} και
@@ -141,33 +141,26 @@ effect από ανθρω
 "Γενικα'έχει βρεθεί ότι \ldots{} {[}\ldots{}{]} Συγκεκριμένα στην
 Ελλάδα\ldots{}
 
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi}.}
-\tightlist
-\item
-  Η λεπτομερής γνώση της δομής και της σύνθεσης της γενετικής
-  παραλλακτικότητας αποτελεί απαραίτητη προϋπόθεση για την προστασία και
-  διαχείριση των γενετικών πόρων ενός είδους. Στη γεωργία, οι
-  περισσότερες καλλιέργειες, έχουν απολέσει το μεγαλύτερο μέρος των
-  γενετικών πόρων που διέθεταν πριν την βελτιστοποίηση της παραγωγικής
-  διαδικασίας μέσω της επιλογής ποικιλιών και άριστων κλώνων.
-  \ldots{}kastanewnes\ldots{} Αυτό έχει σαν αποτέλεσμα να δυσχερένεται
-  το έργο των βελτιωτών στην εύρεση κατάλληλων γενοτύπων για
-  διασταυρώσεις και να μειώνεται το δυναμικό προσαρμογής ως προς νέα
-  γνωρίσματα.
-\end{enumerate}
+Η λεπτομερής γνώση της δομής και της σύνθεσης της γενετικής
+παραλλακτικότητας αποτελεί απαραίτητη προϋπόθεση για την προστασία και
+διαχείριση των γενετικών πόρων ενός είδους. Στη γεωργία, οι περισσότερες
+καλλιέργειες, έχουν απολέσει το μεγαλύτερο μέρος των γενετικών πόρων που
+διέθεταν πριν την βελτιστοποίηση της παραγωγικής διαδικασίας μέσω της
+επιλογής ποικιλιών και άριστων κλώνων. Παρόμοια τάση παρατηρείται και
+στους καστανεώνες της χώρας μας οι οποίοι συνήθως δημιουργούνται με
+εμβόλια επιλεγμένων κλώνων σε υποκείμενα άγριου τύπου. Αυτό έχει σαν
+αποτέλεσμα να δυσχερένεται το έργο των βελτιωτών στην εύρεση κατάλληλων
+γενοτύπων για διασταυρώσεις και να μειώνεται το δυναμικό προσαρμογής ως
+προς νέα γνωρίσματα.
 
-Αυτό το φαινόμενο παρατηρείται στους καστανεώνες της χώρας μας οι οποίοι
-συνήθως δημιουργούνται με εμβόλια επιλεγμένων κλώνων σε υποκείμενα
-άγριου τύπου. coppice - πρεμνοφυής διαχείριση - τα πρεμνοφυή δάση
-αναπαράγονται βλαστικά και αρα αναμένεται να έχουν χαμηλότερο δραστικό
-μέγεθος πληθυσμού συγκρινόμενα με όμοιας έκτασης φυσικά δάση καστανιάς
-που αναπαράγονται εγγενώς (Mattioni et al., 2008).{[}hill{]} Το
-χαμηλότερο δραστικό μέγεθος πληθυσμού υποδεικνύει ότι το γενετικό
-απόθεμα από το οποίο προκύπτει η εξέλιξη του δάσους είναι μικρό και άρα
-ενδυνάμει μικρότερο δυναμικό προσαρμογής ή/και πιο αργό βαθμό
-εξελικτικής προσαρμογής σε περιπτώσεις ταχείας περιβαλλοντικής μεταβολής
-{[}47{]}.
+coppice - πρεμνοφυής διαχείριση - τα πρεμνοφυή δάση αναπαράγονται
+βλαστικά και αρα αναμένεται να έχουν χαμηλότερο δραστικό μέγεθος
+πληθυσμού συγκρινόμενα με όμοιας έκτασης φυσικά δάση καστανιάς που
+αναπαράγονται εγγενώς (Mattioni et al., 2008).{[}hill{]} Το χαμηλότερο
+δραστικό μέγεθος πληθυσμού υποδεικνύει ότι το γενετικό απόθεμα από το
+οποίο προκύπτει η εξέλιξη του δάσους είναι μικρό και άρα ενδυνάμει
+μικρότερο δυναμικό προσαρμογής ή/και πιο αργό βαθμό εξελικτικής
+προσαρμογής σε περιπτώσεις ταχείας περιβαλλοντικής μεταβολής {[}47{]}.
 
 refugia - founder effects
 
@@ -201,7 +194,8 @@ refugia - founder effects
 \section{Μεθοδολογία}
 
 \hypertarget{----dna}{%
-\subsection{Συλλογή φυτικού υλικού \& Εκχύλιση DNA}\label{----dna}}
+\subsubsection{\texorpdfstring{\emph{Συλλογή φυτικού υλικού \& Εκχύλιση
+DNA}}{Συλλογή φυτικού υλικού \& Εκχύλιση DNA}}\label{----dna}}
 
 Θα διεξαχθεί δειγματοληψία κατ' ελάχιστον 25-30 ατόμων ανά πληθυσμό. Η
 εκχύλιση του γενωμικού DNA θα πραγματοποιηθεί με τη μέθοδο CTAB (Doyle
@@ -228,93 +222,79 @@ CsCAT3, CsCAT6) (Buck et al., 2003; Marinoni et al., 2003) και πέντε
 al., 2010). Οι EST-SSR που έχουν επιλεγεί σχετίζονται με την αντοχή των
 δέντρων σε συνθήκες υδατικής έλλειψης.
 
-\hypertarget{-}{%
-\subsection{Στατιστική ανάλυση}\label{-}}
+\hypertarget{---}{%
+\subsection{Γενετική ποικιλότητα εντός πληθυσμών}\label{---}}
 
-Η ανάλυση θα πραγματοποιηθεί σε περιβάλλον της στατιστικής γλώσσας R (R
-Core Team, 2018) με χρήση των πακέτων poppr (Kamvar et al., 2014),
-hierfstat (Goudet, 2005), και genepop (Rousset, 2008). Οι βασικές
+Η στατιστική ανάλυση θα πραγματοποιηθεί σε περιβάλλον της στατιστικής
+γλώσσας R (R Core Team, 2018) με χρήση των πακέτων poppr (Kamvar et al.,
+2014), hierfstat (Goudet, 2005), και genepop (Rousset, 2008). Οι βασικές
 παράμετροι γενετικής ποικιλότητας (αριθμός αλληλομόρφων, ετεροζυγωτία,
 συντελεστής ομομειξίας, ισορροπία Hardy-Weinberg κ.α.) θα εκτιμηθούν
 αφού πρώτα διερευνηθεί η ανισορροπία σύνδεσης μεταξύ των γονιδιακών
 θέσεων και η πιθανότητα ύπαρξης μηδενικών αλληλομόρφων.
 
-Η εκτίμηση δραστικού μεγέθους πληθυσμού θα πραγματοποιηθεί σύμφωνα με τη
-μέθοδο πρυ έχει προταθεί α\ldots{}με το πρόγραμμα N\textsubscript{e}
-Estimator (Do et al., 2014),
+Τα δραστικά μεγέθη των πληθυσμών θα εκτιμηθούν με το πρόγραμμα
+N\textsubscript{e} Estimator (Do et al., 2014), ενώ η ύπαρξη γενετικών
+στενωπών στην εξελικτική ιστορία των πληθυσμών θα διερευνηθεί με τα
+προγράμματα BOTTLENECK (Piry et al., 1999) (πρόσφατο παρελθόν: 2
+N\textsubscript{e} - 4 N\textsubscript{e} γενεές) και Arlequin
+(Excoffier and Lischer, 2010) (M-ratio test, υποδεικνύει παλαιότερες
+δημογραφικές μεταβολές).
 
 Επίσης θα υπολογιστεί ο αριθμός των γενοτύπων (multilocus genotypes) που
 απαντώνται στον υπό μελέτη καστανεώνα.
 
-adegenet (Jombart, 2008) ,pegas,ape,fangorn
+\hypertarget{---}{%
+\subsection{Γενετική ποικιλότητα μεταξύ πληθυσμών}\label{---}}
 
--\textgreater{} M ratio -\textgreater{} υποδεικνύει μείωση μεγέθους
-πληθυσμού σε μεγάλα χρονικά διαστήματα (Aleksic and Geburek, 2014)
-BOTTLENECK -\textgreater{} πρόσφατες γενετικές στενωπούς (2
-N\textsubscript{e} - 4 N\textsubscript{e} γενεές)
-
-R Notebook - R markdown
-
-\subsection{διαφοροποίηση}
-
-Nei's Ds, Cav-Sf για φυλογενετικά F\textsubscript{ST},
-G''\textsubscript{ST}, D\textsubscript{est} PCA, CA AMOVA φυλογενετική
-ape Cavalli-Sforza - δε χρειάζεται για 2 πληθυσμούς. Αν όμως προστεθούν
-κ άλλοι STRUCTURE DAPC
+Θα υπολογιστεί ο συντελεστής διαφοροποίησης F\textsubscript{ST} (Nei,
+1987), η γενετική απόσταση κατά Nei (1978), καθώς και η γεωμετρική
+απόσταση Cavalli-Sforza (Cavalli-Sforza and Edwards, 1967) με το πακέτο
+hierfstat (Goudet, 2005). Οι πολυμεταβλητές αναλύσεις PCA, CA και η
+ανάλυση μοριακής διακύμανσης AMOVA θα διεξαχθούν με το πακέτο adegenet
+(Jombart, 2008). Επιπλέον το λογισμικό Structure (Pritchard et al.,
+2000) θα χρησιμοποιηθεί για την περαιτέρω διερεύνηση της διαφοροποίησης
+των δύο πληθυσμών.
 
 \hypertarget{-}{%
 \subsection{Γονιδιακή ροή}\label{-}}
 
-δες οπωσδήποτε (Aleksic and Geburek, 2014; Leonarduzzi et al., 2016)
-Cervus (see SM1 Leonarduzzi) -\textgreater{} ποσοστό παιδιών που οι
-γονείς τους είναι άτομα του πληθυσμού Nm=1/4FSt παραδοσιακή μέθοδος
-STRUCTURE μοντέλο πρόδρομης γνώσης πληθυσμών -\textgreater{} δες
-(Aleksic and Geburek, 2014; Pritchard et al., 2000) MIGRATE MIGRAINE
-
-With an estimated average mutation rate of roughly l =5 · 10)4
-(Goldstein \& Schlotterer 1999; Whittaker et al.~2003)
-
-In many cases gene flow can be safely assumed to be high relative to
-mutation rate, so in much of the literature GST is used to assess
-migration rates {[}Whitlock 2011{]}
-
-\hypertarget{-}{%
-\subsection{Γενετική τοπίου}\label{-}}
-
-IBD - mantel test - adegenet, ape Genetic boundaries γενετικά φράγματα
-φραγμοί- Monmonier's algorithm sPCA Geneland DIYABC ??? GeneClass2 ???
+Ο αριθμός των μεταναστών θα εκτιμηθεί αρχικά σύμφωνα με το κλασσικό
+μοντέλο \(Nm = [(1 / F~ST~) - 1] / 4\) (Frankham et al., 2002). Ωστόσο,
+αποτελεί παραδοχή της μεθόδου ότι η μετανάστευη είναι τάξεις μεγεθους
+μεγαλύτερη σε σχέση με τις μεταλλάξεις. Λόγω του υψηλού ρυθμού
+μεταλλάξεων που χαρακτηρίζει τους μικροδορυφόρους (περίπου
+\(5 * 10^{-4}\)) (Whittaker et al., 2003) αυτή η παραδοχή ενδέχεται να
+παραβιάζεται (Whitlock, 2011). Για το λόγο αυτό, ο αριθμός των
+μεταναστών θα υπολογιστεί και με τη χρήση των εξειδικευμένων λογισμίκών
+(coalescent-based models) Migrate (Beerli and Felsenstein, 2001) και
+MIGRAINE (De Iorio et al., 2005).
 
 \hypertarget{-}{%
 \section{Αναμενόμενα αποτελέσματα}\label{-}}
 
-Τι θα μάθουμε από αυτή τη \#\#\# Γενετική τοπίου IBD - mantel test -
-adegenet, ape Genetic boundaries γενετικά φράγματα φραγμοί- Monmonier's
-algorithm sPCA Geneland DIYABC ??? GeneClass2 ???μελέτη\ldots{}
-χαρακτηρισμός ποικιλίας Λέσβου gene flow
-
-ΔΕΣ ΔΥΟ παραγράφους outputs στο εδινβουργο!!!
-
 καταγραφή γενετικής ποικιλότητας και δημογραφικών παραγόντων των δύο
-πληθυσμών. Αυτό θα ενισχύσει την προσπάθει προστασία των γενετικών πόρων
-του είδους στο ΒΑ Αιγαίο και την ορθολογική διαχείρηση του
-πολλαπλασιαστικού υλικού
+πληθυσμών. Αυτό θα ενισχύσει την προσπάθεια προστασία των γενετικών
+πόρων του είδους στο ΒΑ Αιγαίο και την ορθολογική διαχείριση του
+πολλαπλασιαστικού υλικού --\textgreater{} πρέπει να γίνει κάτι για την
+προστασία των γεν πόρων του φυσικού πληθυσμού;
 
-γενετικός χαρακτηρισμός ποικιλία λεσβου Αγιάσου --\textgreater{} για την
+γενετικός χαρακτηρισμός ποικιλία Λέσβου Αγιάσου --\textgreater{} για την
 ταυτοποίηση και την ιχνηλασιμότητα πιστοποίηση {[}δες και γανό{]}
 
 \section{Βιβλιογραφία}
 
 \hypertarget{refs}{}
-\leavevmode\hypertarget{ref-Aleksic2014}{}%
-Aleksic, J.M., Geburek, T., 2014. Quaternary population dynamics of an
-endemic conifer, Picea omorika, and their conservation implications.
-Conservation Genetics 15, 87--107.
-\url{https://doi.org/10.1007/s10592-013-0523-6}
-
 \leavevmode\hypertarget{ref-Aravanopoulos2018a}{}%
 Aravanopoulos, F.A., 2018. Do Silviculture and Forest Management Affect
 the Genetic Diversity and Structure of Long-Impacted Forest Tree
 Populations? Forests 9, 14.
+
+\leavevmode\hypertarget{ref-beerli_maximum_2001}{}%
+Beerli, P., Felsenstein, J., 2001. Maximum likelihood estimation of a
+migration matrix and effective population sizes in n subpopulations by
+using a coalescent approach. PNAS 98, 4563--4568.
+\url{https://doi.org/10.1073/pnas.081068098}
 
 \leavevmode\hypertarget{ref-buck_isolation_2003}{}%
 Buck, E.J., Hadonou, M., James, C.J., Blakesley, D., Russell, K., 2003.
@@ -328,6 +308,17 @@ analysis of seeded and vegetative biotype buffalograsses based on
 phylogenetic relationship using ISSRs, SSRs, RAPDs, and SRAPs. Theor
 Appl Genet 109, 280--288.
 \url{https://doi.org/10.1007/s00122-004-1630-z}
+
+\leavevmode\hypertarget{ref-cavalli1967phylogenetic}{}%
+Cavalli-Sforza, L.L., Edwards, A.W., 1967. Phylogenetic analysis: Models
+and estimation procedures. Evolution 21, 550--570.
+
+\leavevmode\hypertarget{ref-de_iorio_stepwise_2005}{}%
+De Iorio, M., Griffiths, R.C., Leblois, R., Rousset, F., 2005. Stepwise
+mutation likelihood computation by sequential importance sampling in
+subdivided population models. Theoretical Population Biology, John
+maynard smith memorial issue 68, 41--53.
+\url{https://doi.org/10.1016/j.tpb.2005.02.001}
 
 \leavevmode\hypertarget{ref-Do2014}{}%
 Do, C., Waples, R.S., Peel, D., Macbeth, G.M., Tillett, B.J., Ovenden,
@@ -349,6 +340,16 @@ Daruvar, A., Kremer, A., Plomion, C., 2010. A fast and cost-effective
 approach to develop and map EST-SSR markers: Oak as a case study. BMC
 Genomics 11, 570. \url{https://doi.org/10.1186/1471-2164-11-570}
 
+\leavevmode\hypertarget{ref-excoffier_arlequin_2010}{}%
+Excoffier, L., Lischer, H.E.L., 2010. Arlequin suite ver 3.5: A new
+series of programs to perform population genetics analyses under Linux
+and Windows. Molecular Ecology Resources 10, 564--567.
+\url{https://doi.org/10.1111/j.1755-0998.2010.02847.x}
+
+\leavevmode\hypertarget{ref-frankham_introduction_2002}{}%
+Frankham, R., Briscoe, D.A., Ballou, J.D., 2002. Introduction to
+conservation genetics. Cambridge university press.
+
 \leavevmode\hypertarget{ref-goudet_hierfstat_2005}{}%
 Goudet, J., 2005. Hierfstat, a package for r to compute and test
 hierarchical F-statistics. Molecular Ecology Notes 5, 184--186.
@@ -365,12 +366,6 @@ for genetic analysis of populations with clonal, partially clonal,
 and/or sexual reproduction. PeerJ 2, e281.
 \url{https://doi.org/10.7717/peerj.281}
 
-\leavevmode\hypertarget{ref-Leonarduzzi2016a}{}%
-Leonarduzzi, C., Piotti, A., Spanu, I., Vendramin, G.G., 2016. Effective
-gene flow in a historically fragmented area at the southern edge of
-silver fir (Abies alba Mill.) Distribution. Tree Genetics \& Genomes 12,
-95. \url{https://doi.org/10.1007/s11295-016-1053-4}
-
 \leavevmode\hypertarget{ref-marinoni_development_2003}{}%
 Marinoni, D., Akkak, A., Bounous, G., Edwards, K.J., Botta, R., 2003.
 Development and characterization of microsatellite markers in Castanea
@@ -382,6 +377,15 @@ Mattioni, C., Cherubini, M., Micheli, E., Villani, F., Bucci, G., 2008.
 Role of domestication in shaping \emph{Castanea} \emph{Sativa} genetic
 variation in Europe. Tree Genetics \& Genomes 4, 563--574.
 \url{https://doi.org/10.1007/s11295-008-0132-6}
+
+\leavevmode\hypertarget{ref-nei1987molecular}{}%
+Nei, M., 1987. Molecular evolutionary genetics. Columbia university
+press.
+
+\leavevmode\hypertarget{ref-Nei1978}{}%
+Nei, M., 1978. Estimation of average heterozygosity and genetic distance
+from a small number of individuals. Genetics 89, 583--590.
+\url{https://doi.org/10.3390/ijms15010277}
 
 \leavevmode\hypertarget{ref-Petit2003}{}%
 Petit, R.J., Aguinagalde, I., De Beaulieu, J.L., Bittkau, C., Brewer,
@@ -397,6 +401,12 @@ Vendramin, G.G., 2005. Comparative organization of chloroplast,
 mitochondrial and nuclear diversity in plant populations. Molecular
 Ecology 14, 689--701.
 \url{https://doi.org/10.1111/j.1365-294X.2004.02410.x}
+
+\leavevmode\hypertarget{ref-Piry1999}{}%
+Piry, S., Luikart, G., Cornuet, J.-M., 1999. BOTTLENECK: A Computer
+Program for Detecting Recent Reductions in the Effective Population Size
+Using Allele Frequency Data. The Journal of Heredity Ann Hum Genet 90,
+253--259.
 
 \leavevmode\hypertarget{ref-Pollegioni2011}{}%
 Pollegioni, P., Woeste, K., Olimpieri, I., Marandola, D., Cannata, F.,
@@ -422,6 +432,15 @@ genepop software for Windows and Linux. Molecular Ecology Resources 8,
 Wang, I.J., 2010. Recognizing the temporal distinctions between
 landscape genetics and phylogeography. Molecular Ecology 19, 2605--2608.
 \url{https://doi.org/10.1111/j.1365-294X.2010.04715.x}
+
+\leavevmode\hypertarget{ref-whitlock_gst_2011}{}%
+Whitlock, M.C., 2011. G'ST and D do not replace FST. Molecular Ecology
+20, 1083--1091. \url{https://doi.org/10.1111/j.1365-294X.2010.04996.x}
+
+\leavevmode\hypertarget{ref-whittaker_likelihood-based_2003}{}%
+Whittaker, J.C., Harbord, R.M., Boxall, N., Mackay, I., Dawson, G.,
+Sibly, R.M., 2003. Likelihood-Based Estimation of Microsatellite
+Mutation Rates. Genetics 164, 781--787.
 
 \leavevmode\hypertarget{ref-__2013}{}%
 Γανόπουλος, Ι., 2013. Διερεύνηση γενετικής ποικιλότητας, ταυτοποίηση και
