--- a/Tourvas_proposal.Rmd
+++ b/Tourvas_proposal.Rmd
@@ -8,13 +8,13 @@ papersize: a4
 date: "Οκτώβριος 2018"
 documentclass: report
 output:
+  bookdown::word_document2:
+    toc: yes
   bookdown::pdf_document2:
     keep_tex: yes
     latex_engine: xelatex
     toc: no
     number_sections: no
-  bookdown::word_document2:
-    toc: yes
 header-includes: 
   \usepackage[greek]{babel}
   # \usepackage{extsizes}
@@ -36,61 +36,49 @@ always_allow_html: yes
  
 ## Εισαγωγή
 
-Η ευρωπαϊκή καστανιά (_Castanea sativa_ Mill.) είναι ένα από τα πιο διαδεδομένα και οικονομικά σημαντικά είδη της λεκάνης της Μεσογείου (cite euforgen). Εκμεταλλεύεται τόσο για τους καρπούς της όσο και για την ξυλεία της και για αυτό το λόγο καλλιεργείται σε περιοχές πλέον της μεσογειακής ζώνης (citation?). 
+Η ευρωπαϊκή καστανιά (_Castanea sativa_ Mill.) είναι ένα από τα πιο διαδεδομένα και οικονομικά σημαντικά είδη της λεκάνης της Μεσογείου. Εκμεταλλεύεται τόσο για τους καρπούς της όσο και για την ξυλεία της και για αυτό το λόγο καλλιεργείται σε περιοχές πλέον της μεσογειακής ζώνης [@fernandez-lopez_castanea_2003]. 
 
 Η μεγάλη εξάρτηση κοινωνιών έχει οδηγήσει...
 Εξαιτίας της εκτεταμένης ανθρωπογενούς μεταφοράς γενετικού υλικού..., γενετικό υλικό του είδους έχει τύχει εκτεταμένης μεταφοράς (δες στα παπερ για ancient και κάνε cite) εδώ και αιώνες. Επιπλέον η χρήση επιλεγμένων γενοτύπων σε καστανεώνες αλλά και πρεμνοφυής διαχείριση των φυσικών πληθυσμών έχουν επιφέρει σημαντικές απώλειες γενετικών πόρων του είδους (αραβανοπ? - παπαδ). Η πίεση αυτή έχει ισχυροποιηθεί - ενταθεί λόγω προσβολών κυρίως από τους μύκητες _Cryphonectria parasitica_ και _Phytophthora cambivora_.
 + κατακερματισμός απομόνωση γενετικού υλικού
 
-ΔΕΣ Παπαδήμα Καστοριά
-
-
 ## Θεωρητικό πλαίσιο
 <!-- Εξηγώ όλους τους παράγοντες που έγραψα στην εισαγωγή -->
-
-1. Σημασία γενετικής ποικ Long term see introduction [@Pollegioni2011]
-   γανο σελ 20-22
-   Selection may erode genetic diversity, which is a crucial factor for the success of breeding programs.
-    Γεωργία vs δασοπονία φυσικοί πληθυσμοί και Γανό σελ 19 [@__2013]
-   τι γίνεται με τους καστανεώνες, δες Πετρόπουλος. [@2016a]
-   
-   τι γινεται με τα coppice --> [@Aravanopoulos2018a]
-
-Refugia - Gene flow - Long term [@Petit2003; @Petit2005]
-Founder effect από ανθρω
-
-(κίνδυνος για γονιδιακή ροή - μόλυνση στον φυσικό πληθυσμό)
-
-Δυο λόγια για τη διεθνή βιβλιογραφία. 
-Υπάρχει ή δεν υπάρχει ποικιλότητα; "Γενικα'έχει βρεθεί ότι ... [...] 
-Συγκεκριμένα στην Ελλάδα...
   
+Η εκτεταμένη καλλιεργεια από τον εχει αφησει το στιγμα της   
   
-Η λεπτομερής γνώση της δομής και της σύνθεσης της γενετικής παραλλακτικότητας αποτελεί απαραίτητη προϋπόθεση για την προστασία και διαχείριση των γενετικών πόρων ενός είδους. Στη γεωργία, οι περισσότερες καλλιέργειες, έχουν απολέσει το μεγαλύτερο μέρος των γενετικών πόρων που διέθεταν πριν την βελτιστοποίηση της παραγωγικής διαδικασίας μέσω της επιλογής ποικιλιών και άριστων κλώνων. Παρόμοια τάση παρατηρείται και στους καστανεώνες της χώρας μας οι οποίοι συνήθως δημιουργούνται με εμβόλια επιλεγμένων κλώνων σε υποκείμενα άγριου τύπου.  Αυτό έχει σαν αποτέλεσμα να δυσχερένεται το έργο των βελτιωτών στην εύρεση κατάλληλων γενοτύπων για διασταυρώσεις και να μειώνεται το δυναμικό προσαρμογής ως προς νέα γνωρίσματα.
+Η λεπτομερής γνώση της δομής και της σύνθεσης της γενετικής παραλλακτικότητας αποτελεί απαραίτητη προϋπόθεση για την προστασία ικαι διαχείριση των γενετικών πόρων ενός είδους. Στη γεωργία, οι περισσότερες καλλιέργειες, έχουν απολέσει το μεγαλύτερο μέρος των γενετικών πόρων που διέθεταν πριν την βελτιστοποίηση της παραγωγικής διαδικασίας μέσω της επιλογής άριστων κλώνων. Αυτή η τάση παρατηρείται και στους καστανεώνες της χώρας μας οι οποίοι συνήθως δημιουργούνται με εμβόλια επιλεγμένων κλώνων.  Αποτέλεσμα αυτής της διαδικασίας είναι οι εγκαθεδρυμένες φυτείες να έχουν μικρά περιθώρια προσαρμογής σε περιβαλλοντικές διαταραχές, αλλά και βελτίωσης ως προς νέα γνωρίσματα [@Reed2003].
 
-coppice - πρεμνοφυής διαχείριση - τα πρεμνοφυή δάση αναπαράγονται βλαστικά και αρα αναμένεται να έχουν χαμηλότερο δραστικό μέγεθος πληθυσμού συγκρινόμενα με όμοιας έκτασης φυσικά δάση καστανιάς που αναπαράγονται εγγενώς [@Mattioni2008].[hill] Το χαμηλότερο δραστικό μέγεθος πληθυσμού υποδεικνύει ότι το γενετικό απόθεμα από το οποίο προκύπτει η εξέλιξη του δάσους είναι μικρό και άρα ενδυνάμει μικρότερο δυναμικό προσαρμογής ή/και πιο αργό βαθμό εξελικτικής προσαρμογής σε περιπτώσεις ταχείας περιβαλλοντικής μεταβολής [47].
+Ένα άλλο πρόβλημα που είναι δυνατόν να προκύψει από την καλλιέργεια καστανεώνων σε μια περιοχή είναι η πιθανότητα εισαγώγης ξένου γενετικού υλικού σε φυσικούς πληθυσμούς μέσω της ροής γονιδιών. Το υλικό αυτό δύναται να αυξήσει το γενετικό φορτίο των φυσικών συστάδων μείωνοντας έτσι την προσαρμοστικότητά τους. [@Lefevre2004; @olden_ecological_2004]
 
-refugia - founder effects
+Η ικανότητα των δασών καστανιάς να αναπαράγονται βλαστικά έχει επιτρέψει στον άνθρωπο να διαχειρίζεται αυτά τα οικοσυστήματα με μικρούς περίτροπους χρόνους.
+Ωστόσο τα πρεμνοφυή δάση αναμένεται να έχουν χαμηλότερο δραστικό μέγεθος πληθυσμού συγκρινόμενα με αντίστοιχα φυσικά δάση καστανιάς που αναπαράγονται εγγενώς [@Mattioni2008]. Το συγκριτικά χαμηλότερο δραστικό μέγεθος πληθυσμού υποδεικνύει ότι το γενετικό απόθεμα από το οποίο προκύπτει η εξελικτική προσαρμογή του δάσους είναι μικρό και άρα ενδυνάμει μικρότερο δυναμικό προσαρμογής ή/και πιο αργό βαθμό εξελικτικής προσαρμογής σε περιπτώσεις ταχείας περιβαλλοντικής μεταβολής [47].
 
-γονιδιακή ροή [aravanop2018]
+Μελετεττς με ισον
 
-## Ερευνητικά ερωτήματα
+<!-- refugia - founder effects [@Petit2005] Long term --> Η κατακερματισμένη εξάπλωση του είδους στη Μεσόγειο καθιστά απαραίτητη την μελέτη και προστασία των γενετικών αποθεμάτων απομονωμένων πληθυσμών, ώστε να μετριαστεί η αρνητική επίδραση της γενετικης εκτροπής
+
+Σημερα κρινεται αναγκαια η μελετη των ελλ πληθ
+
+
 Προτείνεται η μελέτη δύο πληθυσμών καστανιάς της νήσου Λέσβου. Ο ένας πληθυσμός εντοπίζεται σε φυσική συστάδα η οποία διαχειρίζεται πρεμνοφυώς (βλαστικός πολλαπλασιασμός), ενώ ο δεύτερος αντιπροσωπεύει καστανεώνα (περιοχή Αγιάσου) ο οποίος έχει ιδρυθεί με τη χρήση εμβολίων σε άγριου-τύπου υποκείμενα.
+
+## Σκοπός
 
 Σκοποί της παρούσας πρότασης είναι:
 
 1. Η μελέτη της γενετικής ποικιλότητας και διαφοροποίησης δύο πληθυσμών καστανιάς (καστανεώνας - φυσικός πληθυσμός) στη νήσο Λέσβο με τη χρήση μοριακών δεικτών μικροδορυφόρων SSR.
 
-2. Η καταγραφή των κλώνων (multilocus genotypes) που συγκροτούν τον καστανεώνα και κατ' επέκταση την ποικιλία καστάνων Αγιάσου στη νήσο Λέσβο. 
-
 3. Η μελέτη γονιδιακής ροής μεταξύ των δύο πληθυσμών.
+
+2. Η καταγραφή των κλώνων (multilocus genotypes) που συγκροτούν τον καστανεώνα και κατ' επέκταση την ποικιλία καστάνων Αγιάσου στη νήσο Λέσβο. 
 
 ## Μεθοδολογία
 
 #### _Συλλογή φυτικού υλικού & Εκχύλιση DNA_
 Θα διεξαχθεί δειγματοληψία κατ' ελάχιστον 25-30 ατόμων ανά πληθυσμό. Η εκχύλιση του γενωμικού DNA θα πραγματοποιηθεί με τη μέθοδο CTAB [@doyle1987genomic].
 
-### Αλυσιδωτή αντίδραση πολυμεράσης & Γενοτύπηση
+### Αλυσιδωτή αντίδραση πολυμεράσης
 Για τη γενετική ανάλυση θα χρησιμοποιηθούν μοριακοί δείκτες SSR (Simple Sequence Repeats). Οι SSR ή μικροδορυφορικοί δείκτες αποτελούνται από αλληλουχίες 2-5 νουκλεοτιδίων που επαναλαμβάνονται 5-100 φορές [@budak_comparative_2004]. Ο συγκυρίαρχος χαρακτήρας τους σε συνδυασμό με τα υψηλά επίπεδα πολυμορφισμού που παρουσιάζουν, τους καθιστούν εξαιρετικούς δείκτες για τη μελέτη πρόσφατων μικροεξελικτικών διεργασιών [@Wang2010a]. Οι μικροδορυφόροι μπορούν να διακριθούν σε ουδέτερους και λειτουργικούς. Στην πρώτη κατηγορία ανήκουν εκείνες οι γονιδιακές θέσεις οι οποίες βρίσκονται σε τυχαία τμήματα του γονιδιώματος. Αντίθετα οι λειτουργικοί δείκτες ενισχύουν γονιδιακές θέσεις που εκφράζονται και επομένως σχετίζονται με κάποια βιολογική διεργασία [citation???].
 
 Συγκεκριμένα θα χρησιμοποιηθούν τρεις ουδέτεροι δείκτες SSR (EMCs38, CsCAT3, CsCAT6) [@buck_isolation_2003; @marinoni_development_2003] και πέντε δείκτες EST-SSR (GOT004, GOT021, FIR110, POR042 και WAG004) [@durand_fast_2010]. Οι EST-SSR που έχουν επιλεγεί σχετίζονται με την αντοχή των δέντρων σε συνθήκες υδατικής έλλειψης.
@@ -105,7 +93,7 @@ refugia - founder effects
 
 ### Γενετική ποικιλότητα μεταξύ πληθυσμών
 
-Θα υπολογιστεί ο συντελεστής διαφοροποίησης F~ST~ [@nei1987molecular], η γενετική απόσταση κατά Nei [-@Nei1978], καθώς και η γεωμετρική απόσταση Cavalli-Sforza [@cavalli1967phylogenetic] με το πακέτο hierfstat της R [@goudet_hierfstat_2005]. Οι πολυμεταβλητές αναλύσεις PCA, CA και η ανάλυση μοριακής διακύμανσης AMOVA θα διεξαχθούν με το πακέτο adegenet [@Jombart2008]. Το λογισμικό Structure [@pritchard_inference_2000], αλλά και η πολυμεταβλητή ανάλυση DAPC (σε περιβάλλον R) θα χρησιμοποιηθoύν για την περαιτέρω διερεύνηση της διαφοροποίησης των δύο πληθυσμών. H Dapc ενδέχεται να αποδειχθεί ιδιαίτερα χρήσιμη εάν 
+Θα υπολογιστεί ο συντελεστής διαφοροποίησης F~ST~ [@nei1987molecular], η γενετική απόσταση κατά Nei [-@Nei1978], καθώς και η γεωμετρική απόσταση Cavalli-Sforza [@cavalli1967phylogenetic] με το πακέτο hierfstat της R [@goudet_hierfstat_2005]. Οι πολυμεταβλητές αναλύσεις PCA, CA και η ανάλυση μοριακής διακύμανσης AMOVA θα διεξαχθούν με το πακέτο adegenet [@Jombart2008]. Το λογισμικό Structure [@pritchard_inference_2000], αλλά και η πολυμεταβλητή ανάλυση DAPC (σε περιβάλλον R) θα χρησιμοποιηθoύν για την περαιτέρω διερεύνηση της διαφοροποίησης των δύο πληθυσμών. H DAPC ενδέχεται να αποδειχθεί ιδιαίτερα χρήσιμη εάν οι παραδοχές που απαιτεί το Structure δεν ικανοποιούνται (π.χ. ανισορροπία Hardy-Weinberg).
 
 <!-- η dapc δεν προϋποθέτει ισορροπία Hardy-Weinberg ενδέχεται να αποδειχθεί ιδιαίτερα χρήσιμη εάν-->
 
@@ -115,13 +103,18 @@ refugia - founder effects
 
 ## Αναμενόμενα αποτελέσματα
 
-<!-- ΔΕΣ ΔΥΟ παραγράφους outputs στο εδινβουργο!!! -->
+H καταγραφή της γενετικής ποικιλότητας των πληθυσμών αναμένεται να συνδράμει στο έργο της διαφύλαξης και διαχείρισης των γενετικών πόρων της καστανιάς στη χώρα μας.
+<!-- και την ορθολογική διαχείριση του πολλαπλασιαστικού υλικού --> 
 
-καταγραφή γενετικής ποικιλότητας και δημογραφικών παραγόντων των δύο πληθυσμών. Αυτό θα ενισχύσει την προσπάθεια διαφύλαξης των γενετικών πόρων του είδους στο ΒΑ Αιγαίο και την ορθολογική διαχείριση του πολλαπλασιαστικού υλικού --> πρέπει να γίνει κάτι για την προστασία των γεν πόρων του φυσικού πληθυσμού;
+Επιπροσθέτως, η μελέτη της γονιδιακής ροής θα αποσαφηνίσει την έκταση ενός ενδεχομένου φαινομένου γενετικής ρύπανσης του φυσικού πληθυσμού από τον καστανεώνα. Η γνώση αυτή έχει άμεση πρακτική αξία όσον αφορά τις ενέργειες που πρέπει να ληφθούν για την διατήρηση της γενετικής ταυτότητας των φυσικών πληθυσμών της περιοχής.
 
 Ο γενετικός χαρακτηρισμός της ποικιλίας Αγιάσου Λέσβου 
---> για την ταυτοποίηση και την ιχνηλασιμότητα
-πιστοποίηση [δες και γανό]
+θα επιτρέψει την ανάπτυξη ελέγχων ταυτοποίησης και ιχνηλασιμότητας για το συγκεκριμένο φυτογενετικό υλικό.
+<!-- ενδεχόμενη πιστοποίηση? -->
+
+
+
+
 
 <!-- ## Χρηματοδότηση / Χρονοδιάγραμμα -->
 
