--- a/Tourvas_proposal.tex
+++ b/Tourvas_proposal.tex
@@ -156,11 +156,12 @@ effect από ανθρω
 coppice - πρεμνοφυής διαχείριση - τα πρεμνοφυή δάση αναπαράγονται
 βλαστικά και αρα αναμένεται να έχουν χαμηλότερο δραστικό μέγεθος
 πληθυσμού συγκρινόμενα με όμοιας έκτασης φυσικά δάση καστανιάς που
-αναπαράγονται εγγενώς (Mattioni et al., 2008).{[}hill{]} Το χαμηλότερο
-δραστικό μέγεθος πληθυσμού υποδεικνύει ότι το γενετικό απόθεμα από το
-οποίο προκύπτει η εξέλιξη του δάσους είναι μικρό και άρα ενδυνάμει
-μικρότερο δυναμικό προσαρμογής ή/και πιο αργό βαθμό εξελικτικής
-προσαρμογής σε περιπτώσεις ταχείας περιβαλλοντικής μεταβολής {[}47{]}.
+αναπαράγονται εγγενώς (Mattioni et al., 2008).{[}hill{]} Το συγκριτικά
+χαμηλότερο δραστικό μέγεθος πληθυσμού υποδεικνύει ότι το γενετικό
+απόθεμα από το οποίο προκύπτει η εξελικτική προσαρμογή του δάσους είναι
+μικρό και άρα ενδυνάμει μικρότερο δυναμικό προσαρμογής ή/και πιο αργό
+βαθμό εξελικτικής προσαρμογής σε περιπτώσεις ταχείας περιβαλλοντικής
+μεταβολής {[}47{]}.
 
 refugia - founder effects
 
@@ -184,11 +185,11 @@ refugia - founder effects
   καστανιάς (καστανεώνας - φυσικός πληθυσμός) στη νήσο Λέσβο με τη χρήση
   μοριακών δεικτών μικροδορυφόρων SSR.
 \item
+  Η μελέτη γονιδιακής ροής μεταξύ των δύο πληθυσμών.
+\item
   Η καταγραφή των κλώνων (multilocus genotypes) που συγκροτούν τον
   καστανεώνα και κατ' επέκταση την ποικιλία καστάνων Αγιάσου στη νήσο
   Λέσβο.
-\item
-  Η μελέτη γονιδιακής ροής μεταξύ των δύο πληθυσμών.
 \end{enumerate}
 
 \section{Μεθοδολογία}
@@ -201,8 +202,8 @@ DNA}}{Συλλογή φυτικού υλικού \& Εκχύλιση DNA}}\label
 εκχύλιση του γενωμικού DNA θα πραγματοποιηθεί με τη μέθοδο CTAB (Doyle
 and Doyle, 1987).
 
-\hypertarget{---}{%
-\subsection{Αλυσιδωτή αντίδραση πολυμεράσης \& Γενοτύπηση}\label{---}}
+\hypertarget{--}{%
+\subsection{Αλυσιδωτή αντίδραση πολυμεράσης}\label{--}}
 
 Για τη γενετική ανάλυση θα χρησιμοποιηθούν μοριακοί δείκτες SSR (Simple
 Sequence Repeats). Οι SSR ή μικροδορυφορικοί δείκτες αποτελούνται από
@@ -250,11 +251,12 @@ N\textsubscript{e} - 4 N\textsubscript{e} γενεές) και Arlequin
 Θα υπολογιστεί ο συντελεστής διαφοροποίησης F\textsubscript{ST} (Nei,
 1987), η γενετική απόσταση κατά Nei (1978), καθώς και η γεωμετρική
 απόσταση Cavalli-Sforza (Cavalli-Sforza and Edwards, 1967) με το πακέτο
-hierfstat (Goudet, 2005). Οι πολυμεταβλητές αναλύσεις PCA, CA και η
-ανάλυση μοριακής διακύμανσης AMOVA θα διεξαχθούν με το πακέτο adegenet
-(Jombart, 2008). Επιπλέον το λογισμικό Structure (Pritchard et al.,
-2000) θα χρησιμοποιηθεί για την περαιτέρω διερεύνηση της διαφοροποίησης
-των δύο πληθυσμών.
+hierfstat της R (Goudet, 2005). Οι πολυμεταβλητές αναλύσεις PCA, CA και
+η ανάλυση μοριακής διακύμανσης AMOVA θα διεξαχθούν με το πακέτο adegenet
+(Jombart, 2008). Το λογισμικό Structure (Pritchard et al., 2000), αλλά
+και η πολυμεταβλητή ανάλυση DAPC (σε περιβάλλον R) θα χρησιμοποιηθoύν
+για την περαιτέρω διερεύνηση της διαφοροποίησης των δύο πληθυσμών. H
+Dapc ενδέχεται να αποδειχθεί ιδιαίτερα χρήσιμη εάν
 
 \hypertarget{-}{%
 \subsection{Γονιδιακή ροή}\label{-}}
@@ -273,14 +275,19 @@ MIGRAINE (De Iorio et al., 2005).
 \hypertarget{-}{%
 \section{Αναμενόμενα αποτελέσματα}\label{-}}
 
-καταγραφή γενετικής ποικιλότητας και δημογραφικών παραγόντων των δύο
-πληθυσμών. Αυτό θα ενισχύσει την προσπάθεια προστασία των γενετικών
-πόρων του είδους στο ΒΑ Αιγαίο και την ορθολογική διαχείριση του
-πολλαπλασιαστικού υλικού --\textgreater{} πρέπει να γίνει κάτι για την
-προστασία των γεν πόρων του φυσικού πληθυσμού;
+H καταγραφή της γενετικής ποικιλότητας των πληθυσμών αναμένεται να
+συνδράμει στο έργο της διαφύλαξης και διαχείρισης των γενετικών πόρων
+της καστανιάς στη χώρα μας.
 
-γενετικός χαρακτηρισμός ποικιλία Λέσβου Αγιάσου --\textgreater{} για την
-ταυτοποίηση και την ιχνηλασιμότητα πιστοποίηση {[}δες και γανό{]}
+Επιπροσθέτως, η μελέτη της γονιδιακής ροής θα αποσαφηνίσει την έκταση
+ενός ενδεχομένου φαινομένου γενετικής ρύπανσης του φυσικού πληθυσμού από
+τον καστανεώνα. Η γνώση αυτή έχει άμεση πρακτική αξία όσον αφορά τις
+ενέργειες που πρέπει να ληφθούν για την διατήρηση της γενετικής
+ταυτότητας των φυσικών πληθυσμών της περιοχής.
+
+Ο γενετικός χαρακτηρισμός της ποικιλίας Αγιάσου Λέσβου θα επιτρέψει την
+ανάπτυξη ελέγχων ταυτοποίησης και ιχνηλασιμότητας για το συγκεκριμένο
+υλικό.
 
 \section{Βιβλιογραφία}
 
